--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-my-counter></app-my-counter>
+<app-my-second-counter></app-my-second-counter>
